--- a/style.css
+++ b/style.css
@@ -73,8 +73,12 @@ a:hover {
 }
 
 .hamburger-menu {
-  position: relative;
-  display: inline-block;
+  position: relative; /* Fix the menu to the screen */
+  top: 0; /* Align it to the top */
+  left: 0; /* Align it to the left */
+  z-index: 9999; /* Ensure it stays above other content */
+  background-color: white; /* Solid white background */
+  padding: 10px 0; /* Add some spacing */
 }
 
 .hamburger-icon {
@@ -440,7 +444,7 @@ footer p {
 
 .down-arrow {
   position: absolute;
-  bottom: 20px; /* Adjust this value to move the arrow closer or further from the bottom */
+  bottom: 50px; /* Adjust this value to move the arrow closer or further from the bottom */
   left: 0;
   right: 0;
   margin: 0 auto; /* This will center the arrow horizontally */
