--- a/style.css
+++ b/style.css
@@ -443,11 +443,12 @@ footer p {
 }
 
 .down-arrow {
-  position: absolute;
+  display: flex;
+  position: static;
   bottom: 50px; /* Adjust this value to move the arrow closer or further from the bottom */
   left: 0;
   right: 0;
-  margin: 0 auto; /* This will center the arrow horizontally */
+  margin: 100px auto; /* This will center the arrow horizontally */
   width: 40px; /* Adjust the size of the arrow */
   height: auto; /* Maintains the aspect ratio of the image */
   cursor: pointer;
